--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,41 @@
 ---
-title: "LatinR 2023"
+title: ""
+toc: false
 ---
 
-This is a Quarto website.
+::: grid
+::: {#banner .g-col-12}
+::: {.content-visible when-profile="es"}
+# LatinR 2023
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+## Conferencia Latinoamericana sobre Uso de R en Investigación + Desarrollo
 
-```{r}
-1 + 1
-```
+###  18 al 20 de octubre de 2023 - Montevideo, Uruguay {style="max-width: fit-content; max-width: -moz-fit-content;"}
+:::
+:::
+:::
+
+::: grid
+::: {.content-visible when-profile="en"}
+::: {#banner .g-col-12}
+# LatinR 2023
+
+## Latinamerican Conference About the Use of R in R&D
+
+###  October 18-20, 2023 - Montevideo, Uruguay {style="max-width: fit-content; max-width: -moz-fit-content;"}
+:::
+:::
+:::
+
+::: grid
+::: {.content-visible when-profile="pt"}
+::: {#banner .g-col-12}
+# LatinR 2023
+
+## Conferência Latino-Americana sobre o Uso de R em Pesquisa e Desenvolvimento
+
+###  18 a 20 de outubro de 2023 - Montevideo, Uruguay {style="max-width: fit-content; max-width: -moz-fit-content;"}
+:::
+:::
+:::
+
