--- a/sobre/ediciones-anteriores.qmd
+++ b/sobre/ediciones-anteriores.qmd
@@ -1,37 +1,23 @@
 ---
-pagetitle: "Ediciones anteriores"
+title: "Ediciones anteriores"
 ---
-
-::: grid
-::: {#about_banner .g-col-12 .title}
-# Ediciones anteriores
-:::
-
-::: {.g-col-12 .text_block}
 
 Las presentaciones y pósters de ediciones anteriores se encuentran en los siguientes repositorios:
 
-* [Latinr2022](https://github.com/LatinR/presentaciones-LatinR2022)
+-   [Latinr2022](https://github.com/LatinR/presentaciones-LatinR2022)
 
-  En línea, octubre de 2022. Chairs: Natalia da Silva, Riva Quiroga, Yanina Bellini Saibene.
+    En línea, octubre de 2022. Chairs: Natalia da Silva, Riva Quiroga, Yanina Bellini Saibene.
 
+-   [Latinr2021](https://github.com/LatinR/presentaciones-LatinR2021)
 
-* [Latinr2021](https://github.com/LatinR/presentaciones-LatinR2021)
+    En línea, noviembre de 2021. Chairs: Natalia da Silva, Riva Quiroga, Yanina Bellini Saibene.
 
-  En línea, noviembre de 2021. Chairs: Natalia da Silva, Riva Quiroga, Yanina Bellini Saibene.
+-   [Latinr2020](https://github.com/LatinR/presentaciones-LatinR2020)
 
-* [Latinr2020](https://github.com/LatinR/presentaciones-LatinR2020)
+    En línea, octubre de 2020. Chairs: Natalia da Silva, Riva Quiroga, Yanina Bellini Saibene, Florencia D'Andrea.
 
-  En línea, octubre de 2020. Chairs: Natalia da Silva, Riva Quiroga, Yanina Bellini Saibene, Florencia D'Andrea.
+-   [Latinr2019](https://github.com/LatinR/presentaciones-LatinR2019)\
+    Santiago de Chile, septiembre de 2019. Chairs: Riva Quiroga, Laura Acion, Natalia da Silva.
 
-* [Latinr2019](https://github.com/LatinR/presentaciones-LatinR2019)   
-  Santiago de Chile, septiembre de 2019. Chairs: Riva Quiroga, Laura Acion, Natalia da Silva.
-
-* [Latinr2018](https://github.com/LatinR/presentaciones-LatinR2018)  
-  Buenos Aires, septiembre de 2018. Chairs: Laura Acion, Riva Quiroga, Natalia da Silva
-
-:::
-
-:::
-
-
+-   [Latinr2018](https://github.com/LatinR/presentaciones-LatinR2018)\
+    Buenos Aires, septiembre de 2018. Chairs: Laura Acion, Riva Quiroga, Natalia da Silva
