page layout custom only in the homepage

--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,7 @@
 ---
 pagetitle: "LatinR 2023"
 toc: false
+page-layout: custom
 ---
 
 ::: {.content-visible when-profile="es"}
@@ -25,7 +26,7 @@ toc: false
 
 ::: {.content-visible when-profile="en"}
 ::: grid
-::: {#banner .g-col-12}
+::: g-col-12
 # LatinR 2023
 
 ## Latinamerican Conference About the Use of R in R&D
@@ -45,7 +46,7 @@ toc: false
 
 ::: {.content-visible when-profile="pt"}
 ::: grid
-::: {#banner .g-col-12}
+::: g-col-12
 # LatinR 2023
 
 ## Conferência Latino-Americana sobre o Uso de R em Pesquisa e Desenvolvimento
