Link a eventbrite y keynote speakers
Agregué en novedades datos sobre la inscripción, costos y link a eventbrite, e info sobre los keynote speakers. También el link a eventbrite en el espacio de llamado de trabajos, en los tres idiomas. Hay que revisar el portugués.

--- a/blog/en/2023-04-24-submissions-2023.md
+++ b/blog/en/2023-04-24-submissions-2023.md
@@ -48,6 +48,17 @@ The suggested topics for this edition are the following:
 
 -   Use of R with other programming languages and platforms <br><br>
 
+
+<br>
+
+<div class="boxBorder">
+You can register using eventbrite at this [link](https://www.eventbrite.cl/e/latinr-2023-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-637517701607?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=escb) selection the corresponding ticket.
+
+
+</div>
+
+<br><br><br><br>
+
 ##### Types of submissions
 
 ###### Oral presentations
