Cambio fecha trabajos

--- a/blog/en/2023-04-24-submissions-2023.md
+++ b/blog/en/2023-04-24-submissions-2023.md
@@ -122,6 +122,6 @@ template](https://docs.google.com/document/d/1bK7JrGb1qgr4abjF1kU9pXgqNOAtXFlx/e
 
 ##### Key dates
 
-**Submission deadline**: ~~May 31st, 2023~~ June 16th, 2023
+**Submission deadline**: June 30th, 2023
 
 **Acceptation notice**: early August 2023
