--- a/blog/en/2023-04-24-submissions-2023.md
+++ b/blog/en/2023-04-24-submissions-2023.md
@@ -10,7 +10,8 @@ editor_options:
     wrap: 72
 ---
 
-#### LatinR2023 \<- "Latinamerican Conference About the use of R in R&D"
+<h3><center>CALL FOR SUBMISSIONS CLOSED!</center></h3>
+
 
 <br> <br> The sixth edition of the conference will take place in
 Montevideo, Uruguay, between October 18th and 20th. In this edition it
