--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,13 @@
 pagetitle: "LatinR 2023"
 toc: false
 page-layout: custom
+# listing:
+#   - id: blog-es
+#     contents: blog/es/
+#     fields: [date, title]
+#     sort: "date desc"
+#     type: default
+#     page-size: 3
 ---
 
 ```{css echo=FALSE}
@@ -51,6 +58,11 @@ info_keynotes <- generar_info_keynotes()
 generar_cards_keynotes(info_keynotes, col_info = "", width_col = "20%")
 
 ```
+
+<!-- ## Novedades -->
+
+<!-- ::: {#blog-es} -->
+<!-- ::: -->
 
 
 :::
