copyediting ES + reorder of sponsors and keynotes

--- a/blog/es/2023-06-08-keynotesES-2023.md
+++ b/blog/es/2023-06-08-keynotesES-2023.md
@@ -17,14 +17,14 @@ ref: keynotes-2023
 ![](../../img/posts/hanna.jpg)
 
 #### _Dra. Hanna Frick_
-Hanna Frick es co-fundadora de R Ladies Global,  trabaja como ingeniera de software en Posit (Ex. RStudio) en el área de modelado estadístico colaborando en el desarrollo del paquete tidymodels (conjunto de paquetes para el modelado y el aprendizaje estadístico usando los principios del paquete tidyverse. Además  (https://www.frick.ws)
+Hanna Frick es co-fundadora de R Ladies Global, trabaja como ingeniera de software en Posit (ex RStudio) en el área de modelado estadístico. Colabora en el desarrollo de tidymodels, el conjunto de paquetes para modelado y aprendizaje estadístico inspirado en los principios del Tidyverse (https://www.frick.ws).
 
 <br> 
 
 ![](../../img/posts/dianne.jpg)
 
 #### _Dra. Dianne Cook_
-Dianne Cook es profesora de Business Analytics en Monash University cuyos temas de interés son la estadística computacional, visualización estadística, problemas en altas dimensiones entre otros. Es miembro del R Foundation y editora del R Journal (http://www.dicook.org).
+Dianne Cook es profesora de Business Analytics en Monash University. Sus principales temas de interés son la estadística computacional y la visualización estadística, particularmente la visualización de datos de alta dimensionalidad. Es miembro del R Foundation y editora del R Journal (http://www.dicook.org).
 
 
 <br> 
@@ -39,4 +39,4 @@ Fabrizio Scrollini es el Director para América Latina y el Caribe del Equipo Hu
 ![](../../img/posts/Max.jpg)
 
 #### _Dr. Max Kuhn_
-Max Kuhn trabaja actualmente como ingeniero de software en Posit (Ex. Rstudio) liderando el desarrollo de software en el área del modelado estadístico anteriormente fue Director de área de estadística no clínica de Pfizer Global. Es autor de numerosos paquetes de R con foco en aprendizaje estadístico e investigación reproducible (https://www.rstudio.com/authors/max-kuhn/).
+Max Kuhn trabaja como ingeniero de software en Posit (ex RStudio) liderando el desarrollo de software en el área del modelado estadístico. Anteriormente fue Director del área de estadística no clínica de Pfizer Global. Es autor de numerosos paquetes de R con foco en aprendizaje estadístico e investigación reproducible (https://www.rstudio.com/authors/max-kuhn/).
