adding the silent h :)

--- a/blog/en/2023-06-08-keynotesen-2023.md
+++ b/blog/en/2023-06-08-keynotesen-2023.md
@@ -14,10 +14,10 @@ ref: keynotes-2023
 <br>
 <br>
 <br>
-![](../../img/posts/hanna.jpg)
+![](../../img/posts/hannah.jpg)
 
-#### _Dra. Hanna Frick_
-Hanna Frick is a co-founder of R Ladies Global and works as a software engineer at Posit (formerly RStudio) in the field of statistical modeling, collaborating on the development of the tidymodels package (a set of packages for modeling and statistical learning using the principles of the tidyverse package) (https://www.frick.ws).
+#### _Dra. Hannah Frick_
+Hannah Frick is a co-founder of R Ladies Global and works as a software engineer at Posit (formerly RStudio) in the field of statistical modeling, collaborating on the development of the tidymodels package (a set of packages for modeling and statistical learning using the principles of the tidyverse package) (https://www.frick.ws).
 <br> 
 
 ![](../../img/posts/dianne.jpg)
