--- a/blog/es/2023-06-08-keynotesES-2023.md
+++ b/blog/es/2023-06-08-keynotesES-2023.md
@@ -14,10 +14,10 @@ ref: keynotes-2023
 <br>
 <br>
 <br>
-![](../../img/posts/hanna.jpg)
+![](../../img/posts/hannah.jpg)
 
-#### _Dra. Hanna Frick_
-Hanna Frick es co-fundadora de R Ladies Global, trabaja como ingeniera de software en Posit (ex RStudio) en el área de modelado estadístico. Colabora en el desarrollo de tidymodels, el conjunto de paquetes para modelado y aprendizaje estadístico inspirado en los principios del Tidyverse (https://www.frick.ws).
+#### _Dra. Hannah Frick_
+Hannah Frick es co-fundadora de R Ladies Global, trabaja como ingeniera de software en Posit (ex RStudio) en el área de modelado estadístico. Colabora en el desarrollo de tidymodels, el conjunto de paquetes para modelado y aprendizaje estadístico inspirado en los principios del Tidyverse (https://www.frick.ws).
 
 <br> 
 
