--- a/blog/pt/2023-06-08-keynotespt-2023.md
+++ b/blog/pt/2023-06-08-keynotespt-2023.md
@@ -14,10 +14,10 @@ ref: keynotes-2023
 <br>
 <br>
 <br>
-![](img/posts/hanna.jpg)
+![](img/posts/hannah.jpg)
 
-#### _Dra. Hanna Frick_
-Hanna Frick é co-fundadora do R Ladies Global e trabalha como engenheira de software na Posit (anteriormente RStudio) na área de modelagem estatística, colaborando no desenvolvimento do pacote tidymodels (um conjunto de pacotes para modelagem e aprendizado estatístico usando os princípios do pacote tidyverse) (https://www.frick.ws).
+#### _Dra. Hannah Frick_
+Hannah Frick é co-fundadora do R Ladies Global e trabalha como engenheira de software na Posit (anteriormente RStudio) na área de modelagem estatística, colaborando no desenvolvimento do pacote tidymodels (um conjunto de pacotes para modelagem e aprendizado estatístico usando os princípios do pacote tidyverse) (https://www.frick.ws).
 <br> 
 
 ![](../../img/posts/dianne.jpg)
